--- a/pkmn.css
+++ b/pkmn.css
@@ -20,7 +20,7 @@
             }
             body{
                 image-rendering: crisp-edges;
-                background-image: url(images/tree.png);
+                background-image: url(images/pokeball.png);
                 background-repeat: repeat;
                 background-size: 5%;
                 font-family: bytebounce;
@@ -79,3 +79,4 @@
                 padding-bottom: 10px;
                 
             }
+
