--- a/outerfun.css
+++ b/outerfun.css
@@ -8,19 +8,20 @@
             }            
             header, footer{
                 color: rgb(255, 255, 255);
-                background-color: rgb(0, 0, 0); 
+                
                 padding: 10px;
                 text-align: center;
             }
             section{
                 
                 color: rgb(255, 255, 255);
-                background-color: rgb(0, 0, 0); 
+                
                 padding: 20px;
             }
             body{
                 background-color: black;
-                background-size: 5%;
+                background-image: url(images/star.png);
+                background-size: 3%;
                 font-family: bytebounce;
                 font-size: 125%;
                 margin: 0;
@@ -36,6 +37,9 @@
                 display: inline-block;
                 margin-right: 20px;
                 font-size: 120%;
+            }
+            li:hover{ 
+                transform: scale(1.2);
             }
             a {
                 text-decoration: none;
@@ -53,9 +57,6 @@
                 image-rendering: crisp-edges;
             }
             .box.why{
-                border-style: double;
-                border-width: 10px;
-                background-color: rgb(0, 0, 0);
                 margin: 20px 20% 0 20%;
             }
             .blog{
@@ -67,7 +68,7 @@
                 text-align: center;
             }
             h1{
-                background-color: rgba(0, 0, 0);
+                
                 color: white;
                 margin: 0;
                 padding: 0;
