--- a/seaboy.css
+++ b/seaboy.css
@@ -22,7 +22,7 @@
                 image-rendering: crisp-edges;
                 background-image: url(images/papership.png);
                 background-repeat: repeat;
-                background-size: 5%;
+                background-size: 7%;
                 font-family: bytebounce;
                 font-size: 125%;
                 margin: 0;
@@ -38,6 +38,9 @@
                 display: inline-block;
                 margin-right: 20px;
                 font-size: 120%;
+            }
+            li:hover{ 
+                transform: scale(1.2);
             }
             a {
                 text-decoration: none;
