--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
                 image-rendering: crisp-edges;
                 background-image: url(images/hedgehog.png);
                 background-repeat: repeat;
-                background-size: 5%;
+                background-size: 7%;
                 font-family: bytebounce;
                 font-size: 125%;
                 margin: 0;
@@ -45,8 +45,12 @@
             }
             a:hover{
                 text-decoration: underline;
-                color: #b49068
+                color: #b49068;
             }
+            li:hover{ 
+                transform: scale(1.2);
+            }
+  
             #logo{
                 display: block;
                 margin: auto;
@@ -54,7 +58,7 @@
             img{
                 image-rendering: crisp-edges;
             }
-            .box.why{
+            .box{
                 border: 12px solid;
                 border-image-source: url(images/normalbox.png);
                 border-image-slice: 12 fill;
@@ -75,4 +79,11 @@
                 padding: 0;
                 padding-bottom: 10px;
                 
+            }
+            .screenshots{
+                border-radius: 10px;
+                border: solid 2px black;
+            }
+            .btitle{
+                padding-top: 10px;
             }
